--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
 <body>
 
 <div class="calculator">
-    <h2>Calculadora de Tarifas</h2>
-    <p style="font-size: 0.9em; color: #555;">Seleccione habitación, número de personas y días para estimar la tarifa.</p>
+    <h2>Calculadora de Tarifas para la boda de Cynthia & Jose Miguel </h2>
+    <p style="font-size: 0.9em; color: #555;">Selecciona el tipo de habitación, el número de personas y días para estimar la tarifa para las fechas de nuestra boda!</p>
     <form id="rateForm">
         <div class="form-group">
             <label for="roomType">Tipo de Habitación:</label>
